@@ -3,11 +3,14 @@ version 0.7.1 - ??
  . CocosNode: Camera is lazy alloced (issue #94)
  . CocosNode: addChild, removeChild:cleanup, getChildByTag family functions (issue #253)
  . CocosNode: added better comments, cleanup code (issue #219)
+ . CocosNode: added RGB protocol (issue #234)
  . CocosLive: filter by device id (issue #223)
  . CocosLive: category is UTF8'ized (issue #227)
  . CocosLive: using cc_playername instead of usr_playername (issue #242)
  . CocosLive: supports "update score" (issue #250)
  . Demos: added performance test (issue #243)
+ . Menu: can be aligned in columns (issue #206)
+ . Menu: MenuItem supports LabelAtlas (issue #235)
  . TextureAtlas: support for texture2D (issue #161)
  . Director: FastDirector doesn't leak autoreleased objects (issue #221)
 
